fix: Improve gap between for rows even when honeypot hidden input exists Card: https://app.clickup.com/t/86c3beb3p

--- a/src/styles/globals/form/_form-row.css
+++ b/src/styles/globals/form/_form-row.css
@@ -12,10 +12,12 @@
     align-items: var(--form-row-align-items);
 }
 
-.input-group + .form__row {
+.input-group + .form__row,
+.input-group + input[aria-hidden="true"][hidden] + .form__row {
     margin-top: var(--spacing-normal);
 }
 
-.form__row + .form__row {
+.form__row + .form__row,
+.form__row + input[aria-hidden="true"][hidden] + .form__row {
     margin-top: var(--spacing-m);
 }
