--- a/src/styles/globals/form/_form.css
+++ b/src/styles/globals/form/_form.css
@@ -12,6 +12,8 @@
     font-size: var(--form-font-size);
     font-weight: var(--form-font-weight);
     line-height: var(--form-line-height);
+    container-name: form;
+    container-type: inline-size;
 }
 
 .form:first-child {
